# cybergear_foc

./: README.md
hpm_apps-robot_servo_of_sdk170_v0.1.0/: CMakeLists.txt
hpm_apps-robot_servo_of_sdk170_v0.1.0/boards/hpm6e00sip_pmsm/: board.c  board.h  pinmux.c
hpm_apps-robot_servo_of_sdk170_v0.1.0/customer/: README.md
hpm_apps-robot_servo_of_sdk170_v0.1.0/customer/robot_servo/hardware/01_RbMotor_ECAT_RevB+/: 00. MAIN.kicad_sch  01.SYS_POWER.kicad_sch  02.MCU_POWER.kicad_sch  03.MCU_PA_JTAG.kicad_sch  04.MCU_PB.kicad_sch  05.MCU_PC.kicad_sch  06.MCU_PD.kicad_sch  07.MCU_PE_PF.kicad_sch  08.MCU_OSC.kicad_sch  09.ECAT_IN_OUT.kicad_sch  10.AS5047 Encoder.kicad_sch  11.Current sampling.kicad_sch  12.Motor DriverA.kicad_sch  13.Motor DriverB.kicad_sch  14.Motor DriverC.kicad_sch  15.EEROM.kicad_sch  RbMotor_ECAT_RevB+.kicad_pcb  RbMotor_ECAT_RevB+.kicad_prl  RbMotor_ECAT_RevB+.kicad_pro  RbMotor_ECAT_RevB+.kicad_sch
hpm_apps-robot_servo_of_sdk170_v0.1.0/customer/robot_servo/hardware/02_ECAT_Adapter board/: ECAT_Adapter board.kicad_pcb  ECAT_Adapter board.kicad_pro  ECAT_Adapter board.kicad_sch  SCH.kicad_wks
hpm_apps-robot_servo_of_sdk170_v0.1.0/customer/robot_servo/hardware/03_Debug Adapter board/: Debug Adapter board.kicad_pcb  Debug Adapter board.kicad_pro  Debug Adapter board.kicad_sch
hpm_apps-robot_servo_of_sdk170_v0.1.0/customer/robot_servo/hardware/04_亚克力固定板/: 亚克力板.kicad_pcb  亚克力板.kicad_pro
hpm_apps-robot_servo_of_sdk170_v0.1.0/docs/en/: index.rst
hpm_apps-robot_servo_of_sdk170_v0.1.0/docs/zh/: index.rst
(+143 files in other folders)
